<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEvento_Activity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_gravity="center">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:lines="3"
            android:id="@+id/eDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:background="@drawable/crear_evento_resource"
            android:maxLines="3"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:imeOptions="actionDone"

            />

        <EditText
            android:lines="3"
            android:id="@+id/eCancha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cancha_deportiva"
            android:background="@drawable/crear_evento_resource"
            android:maxLines="3"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"

            />


        <EditText
            android:id="@+id/ePuntoEncuentro"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/punto_de_encuentro"
            android:gravity="center"
            android:background="@drawable/crear_evento_resource"
            android:layout_marginBottom="20dp"
            android:imeOptions="actionDone"
            />

        <EditText
            android:id="@+id/eDeporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/deporte"
            android:background="@drawable/crear_evento_resource"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/eFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/fecha"
            android:background="@drawable/crear_evento_resource"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/eHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/hora"
            android:background="@drawable/crear_evento_resource"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bCrearEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CREAR"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:onClick="OnClickButton_CrearEvento"

            />
    </RelativeLayout>



</LinearLayout>
