<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martinez.steven.practica_2.PerfilActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/iFoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/foto"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eUsuario"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:hint="@string/user"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eCorreo"
            android:layout_margin="10dp"
            android:hint="@string/Email1"
            android:textSize="20dp"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTelefono"
            android:hint="@string/Telefono"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rectangulos_redondos"
                android:text="@string/Guardar"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:onClick="OnClickButton_Guardar"
                android:id="@+id/bSave"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rectangulos_redondos"
                android:text="@string/Cerrar"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:onClick="OnClickButton_Cerrar"
                android:id="@+id/bCerrar"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>