<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:isScrollContainer="true">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name"
                app:titleTextColor="@color/white">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/iFoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/foto"
            android:layout_marginTop="10dp"
            android:onClick="OnclickedFoto"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eUsuario"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:hint="@string/user"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eCorreo"
            android:layout_margin="10dp"
            android:hint="@string/Email1"
            android:textSize="20dp"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTelefono"
            android:hint="@string/Telefono"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

             <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rectangulos_redondos"
                android:text="@string/Guardar"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:id="@+id/bSave"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rectangulos_redondos"
                android:text="@string/Cerrar"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:id="@+id/bCerrar"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>