<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martinez.steven.practica_2.LogginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logol"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="40dp">

        <EditText
            android:id="@+id/eUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:background="@drawable/rectangulos_redondos"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/ePassword"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/rectangulos_redondos"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OlvidoContraseña"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/OIniciarSesionCon"
            android:textSize="18sp" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnSingInGoogle"
            android:layout_margin="10dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rectangulos_redondos"
                android:text="@string/Login"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:textStyle="bold"
                android:onClick="OnClickButton_Loggin"
                android:id="@+id/bLoggin"
                android:layout_alignStart="@id/bRegisto"
                />
            <Button
                android:background="@drawable/rectangulos_redondos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Registro"
                android:layout_alignParentBottom="true"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:textStyle="bold"
                android:gravity="center"
                android:onClick="OnClick_bRegistro"
                android:id="@+id/bRegisto"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
