<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoEventActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            android:layout_gravity="center">

        </android.support.v7.widget.Toolbar>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/iDeporte"/>

        <TextView
            android:id="@+id/tDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/darkgray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/reloj"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/place"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:src="@drawable/user"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/tAnfitrion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroAsistentes"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/tNumeroAsistentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asistir"
            android:background="@drawable/rectangulos_redondos"
            android:drawableBottom="@drawable/ic_done_all_black_24dp"
            android:layout_gravity="center"
            android:onClick="onClickButton_Asistir"/>


    </LinearLayout>

</ScrollView>
